# FileStream_y

./: .gitignore  FileStream_y.py  README.md  pyproject.toml
FileStream_y/: FileStream_y.py  __init__.py  filetype_map.py
